# codeowners-coverage

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: test.yml
src/codeowners_coverage/: __init__.py  __main__.py  checker.py  cli.py  config.py  directory_consolidator.py  git_analyzer.py  github_client.py  matcher.py  ollama_matcher.py  suggest_cache.py  suggester.py
tests/: __init__.py  test_checker.py  test_cli.py  test_config.py  test_directory_consolidator.py  test_git_analyzer.py  test_github_client.py  test_matcher.py  test_ollama_matcher.py  test_suggest_cache.py  test_suggester.py
tests/fixtures/: sample_codeowners
